--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -13,4 +13,5 @@ jobs:
     steps:
       - name: print github values
         run: | 
-          echo "${{github.base_ref}}"
+          echo "github.base_ref=${{github.base_ref}}"
+          echo "GITHUB_BASE_REF=$GITHUB_BASE_REF"
