--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -14,4 +14,6 @@ jobs:
       - name: print github values
         run: | 
           echo "github.base_ref=${{github.base_ref}}"
+          echo "github.head_ref=${{github.head_ref}}"
+          echo "github.ref=${{github.ref}}"
           echo "GITHUB_BASE_REF=$GITHUB_BASE_REF"
