--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -16,4 +16,5 @@ jobs:
           echo "github.base_ref=${{github.base_ref}}"
           echo "github.head_ref=${{github.head_ref}}"
           echo "github.ref=${{github.ref}}"
+          echo "github.ref=${{github.ref}}"
           echo "GITHUB_BASE_REF=$GITHUB_BASE_REF"
